--- a/index.css
+++ b/index.css
@@ -6,6 +6,9 @@ html {
     width: 23rem; 
     background-color:rgba(0, 0, 0, 0.5); 
     border-radius: 0.5rem;
+    padding: 1.5rem;
+    position: relative;
+    overflow: hidden;
 }
 
 
@@ -18,10 +21,15 @@ body {
     align-items: center;
     width: 100%;
     height: 100%;
+    margin: 0;
 }
 .card-address {font-size: 0.8 rem; }
 
-hr {border: solid 1px white;}
+hr {
+    border: solid 1px white;
+    margin: 1.3rem 0 1.3rem 0;
+
+}
 .name {font-weight: 600;
 font-size: 1.4rem;}
 .job {font-size: 0.9rem;}
@@ -29,6 +37,10 @@ font-size: 1.4rem;}
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.profile-container {
+    margin: 2rem 0 2rem 0;
+    position: relative;
 }
 
 .profile-img-container {
@@ -55,7 +67,12 @@ font-size: 1.4rem;}
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    position: absolute;
+    right: 0;
+    bottom: -1.5rem;
 }
+.contact i {margin-bottom: 0.5rem;}
 
 .introduction-container hr {
     width: 15px;
@@ -66,5 +83,14 @@ font-size: 1.4rem;}
     font-size: 0.8rem;
     display: flex;
     justify-content: space-between  ;
+    margin: 1rem 0 3rem 0;
+}
 
+video{width: 100%;
+height: 100%;
+position:absolute;
+top: 0;
+left: 0;
+object-fit: cover;
+z-index: -1;
 }
